# 3DCellAnnotator

./: README.md
MITKIntegration/: .gitignore  CMakeLists.txt  README.md  filelist.txt  patch.py.in
MITKIntegration/mitk-patch/Modules/Segmentation/: CMakeLists.txt  files.cmake
MITKIntegration/mitk-patch/Modules/Segmentation/Algorithms/: mitkAsToolInterface.h
MITKIntegration/mitk-patch/Modules/Segmentation/Interactions/: mitkAsTool.cpp  mitkAsTool.h
MITKIntegration/mitk-patch/Modules/SegmentationUI/: files.cmake
MITKIntegration/mitk-patch/Modules/SegmentationUI/Qmitk/: QmitkAsToolGUI.cpp  QmitkAsToolGUI.h
MITKIntegration/mitk-patch/Plugins/org.mitk.gui.qt.segmentation/src/internal/: QmitkSegmentationView.cpp
SelectiveSegmentation/: .gitignore  CMakeCache.txt  CMakeLists.txt  README.MD  SelectiveConfig.cmake  settings_3DCA.conf
SelectiveSegmentation/src/: SimpleConfig.cu  SimpleConfig.cuh  buildGraph.cu  buildGraph.cuh  common.cu  common.cuh  evolve.cu  evolve.cuh  imagetools.cu  imagetools.cuh  localRegion.cu  localRegion.cuh  macros.h  main.cu  marchingCubes.cu  marchingCubes.cuh  matrix.cu  matrix.cuh  measure.cu  narrowBand.cu  narrowBand.cuh  phaseField.cu  phaseField.cuh  segmentation.cu  segmentation.cuh  selective.h  surfaceAndVolume.cu  surfaceAndVolume.cuh
SelectiveSegmentation/src/ccalg/: README.md  computeComponents.cu  computeComponents.cuh
SelectiveSegmentation/src/cudatools/: README.md  cudaErr.cu  cudaErr.cuh  cudatools.cuh  deviceChunk.cuh  errorHandling.cu  errorHandling.cuh  function.cu  function.cuh  types.cu  types.cuh
